# AndroidOgg

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/fun/learnlife/androidogg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
ogglib/: build.gradle
ogglib/src/main/: AndroidManifest.xml
ogglib/src/main/cpp/: CMakeLists.txt  fun_learnlife_ogglib_OggLib.h  log.h  ogg-lib.cpp
ogglib/src/main/cpp/vorbis/examples/: encoder_example.c  seeking_example.c
ogglib/src/main/cpp/vorbis/include/ogg/: ogg.h
ogglib/src/main/cpp/vorbis/lib/: analysis.c  bitrate.c  bitrate.h  block.c  codebook.c  codebook.h  envelope.c  floor0.c  floor1.c  info.c  lpc.h  mapping0.c  mdct.h  os.h  psy.c  res0.c  sharedbook.c  smallft.h  synthesis.c  vorbisenc.c  vorbisfile.c
ogglib/src/main/cpp/vorbis/lib/books/coupled/: res_books_stereo.h
ogglib/src/main/cpp/vorbis/lib/books/uncoupled/: res_books_uncoupled.h
ogglib/src/main/cpp/vorbis/lib/modes/: floor_all.h  residue_44.h  residue_44p51.h  residue_44u.h  residue_8.h
ogglib/src/main/cpp/vorbis/libogg/: bitwise.c  framing.c
ogglib/src/main/java/fun/learnlife/ogglib/: OggLib.java
